<resources>
    <string name="app_name">Android Modul</string>
    <string name="tittle">PRAKTIKUM MDP MODUL ANDROID</string>
    <string name="regtittle">REGISTRASI DATA</string>
    <string name="updtittle">UPDATE DATA USER</string>
    <string name="user">username</string>
    <string name="password">password</string>
    <string name="login">masuk</string>
    <string name="register">register</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="logout">Logout</string>
    <string name="Header">Selamat datang Di Praktikum MDP 2018</string>
    <string name="name">Muhammad Ricky Reza</string>
    <string name="description">Selanjutnya Kamu Telah Berhasil Login Di Apliksi Ini</string>
</resources>
